# whisper-web

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md
.github/workflows/: docker-publish.yml
backend/: pyproject.toml  requirements.txt
backend/tests/: test_app.py
backend/whisper_streamer/: main.py
frontend/: index.html  whisper-client.d.ts  whisper-client.js
helm/whisper-web/: Chart.yaml  values-gpu.yaml  values.yaml
helm/whisper-web/templates/: deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
tests/: test_api_integration.py
